L3/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> VOID MAIN LPAREN RPAREN LBRACE function_content RBRACE
Rule 2     function_content -> assignment_statement
Rule 3     function_content -> while_stat
Rule 4     function_content -> if_stat
Rule 5     function_content -> assignment_statement function_content
Rule 6     function_content -> while_stat function_content
Rule 7     function_content -> if_stat function_content
Rule 8     function_content -> declaration
Rule 9     function_content -> declaration function_content
Rule 10    declaration -> INT varlist SEMICOLON
Rule 11    varlist -> NAME COMMA varlist
Rule 12    varlist -> NAME
Rule 13    varlist -> pointer COMMA varlist
Rule 14    varlist -> pointer
Rule 15    pointer -> ASTERISK pointer
Rule 16    pointer -> ASTERISK NAME
Rule 17    assignment_statement -> ID EQUAL expression SEMICOLON
Rule 18    assignment_statement -> LEFT EQUAL expression SEMICOLON
Rule 19    ID -> NAME
Rule 20    LEFT -> ASTERISK var
Rule 21    expression -> expression PLUS expression
Rule 22    expression -> expression MINUS expression
Rule 23    expression -> expression ASTERISK expression
Rule 24    expression -> expression DIVIDE expression
Rule 25    expression -> var
Rule 26    expression -> NUMBERvar
Rule 27    expression -> LPAREN expression RPAREN
Rule 28    NUMBERvar -> NUMBER
Rule 29    var -> ASTERISK var
Rule 30    var -> AMPERSAND var
Rule 31    var -> NAME
Rule 32    expression -> MINUS expression
Rule 33    while_stat -> WHILE LPAREN b_expression RPAREN LBRACE function_content RBRACE
Rule 34    while_stat -> WHILE LPAREN b_expression RPAREN assignment_statement
Rule 35    if_stat -> IF LPAREN b_expression RPAREN LBRACE function_content RBRACE
Rule 36    if_stat -> IF LPAREN b_expression RPAREN LBRACE function_content RBRACE elsepart
Rule 37    if_stat -> IF LPAREN b_expression RPAREN assignment_statement
Rule 38    if_stat -> IF LPAREN b_expression RPAREN assignment_statement elsepart
Rule 39    elsepart -> elif
Rule 40    elsepart -> else
Rule 41    elif -> ELSE if_stat
Rule 42    else -> ELSE assignment_statement
Rule 43    else -> ELSE LBRACE function_content RBRACE
Rule 44    b_expression -> expression sign1 expression
Rule 45    b_expression -> b_expression sign2 b_expression
Rule 46    sign1 -> EQUALS
Rule 47    sign1 -> NOTEQUAL
Rule 48    sign1 -> GREATER
Rule 49    sign1 -> LESSER
Rule 50    sign2 -> LOGOR
Rule 51    sign2 -> LOGAND

Terminals, with rules where they appear

AMPERSAND            : 30
ASTERISK             : 15 16 20 23 29
COMMA                : 11 13
DIVIDE               : 24
ELSE                 : 41 42 43
EQUAL                : 17 18
EQUALS               : 46
GREATER              : 48
IF                   : 35 36 37 38
INT                  : 10
LBRACE               : 1 33 35 36 43
LESSER               : 49
LOGAND               : 51
LOGOR                : 50
LPAREN               : 1 27 33 34 35 36 37 38
MAIN                 : 1
MINUS                : 22 32
NAME                 : 11 12 16 19 31
NOTEQUAL             : 47
NUMBER               : 28
PLUS                 : 21
RBRACE               : 1 33 35 36 43
RPAREN               : 1 27 33 34 35 36 37 38
SEMICOLON            : 10 17 18
VOID                 : 1
WHILE                : 33 34
error                : 

Nonterminals, with rules where they appear

ID                   : 17
LEFT                 : 18
NUMBERvar            : 26
assignment_statement : 2 5 34 37 38 42
b_expression         : 33 34 35 36 37 38 45 45
declaration          : 8 9
elif                 : 39
else                 : 40
elsepart             : 36 38
expression           : 17 18 21 21 22 22 23 23 24 24 27 32 44 44
function_content     : 1 5 6 7 9 33 35 36 43
if_stat              : 4 7 41
pointer              : 13 14 15
program              : 0
sign1                : 44
sign2                : 45
var                  : 20 25 29 30
varlist              : 10 11 13
while_stat           : 3 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . VOID MAIN LPAREN RPAREN LBRACE function_content RBRACE

    VOID            shift and go to state 1

    program                        shift and go to state 2

state 1

    (1) program -> VOID . MAIN LPAREN RPAREN LBRACE function_content RBRACE

    MAIN            shift and go to state 3


state 2

    (0) S' -> program .



state 3

    (1) program -> VOID MAIN . LPAREN RPAREN LBRACE function_content RBRACE

    LPAREN          shift and go to state 4


state 4

    (1) program -> VOID MAIN LPAREN . RPAREN LBRACE function_content RBRACE

    RPAREN          shift and go to state 5


state 5

    (1) program -> VOID MAIN LPAREN RPAREN . LBRACE function_content RBRACE

    LBRACE          shift and go to state 6


state 6

    (1) program -> VOID MAIN LPAREN RPAREN LBRACE . function_content RBRACE
    (2) function_content -> . assignment_statement
    (3) function_content -> . while_stat
    (4) function_content -> . if_stat
    (5) function_content -> . assignment_statement function_content
    (6) function_content -> . while_stat function_content
    (7) function_content -> . if_stat function_content
    (8) function_content -> . declaration
    (9) function_content -> . declaration function_content
    (17) assignment_statement -> . ID EQUAL expression SEMICOLON
    (18) assignment_statement -> . LEFT EQUAL expression SEMICOLON
    (33) while_stat -> . WHILE LPAREN b_expression RPAREN LBRACE function_content RBRACE
    (34) while_stat -> . WHILE LPAREN b_expression RPAREN assignment_statement
    (35) if_stat -> . IF LPAREN b_expression RPAREN LBRACE function_content RBRACE
    (36) if_stat -> . IF LPAREN b_expression RPAREN LBRACE function_content RBRACE elsepart
    (37) if_stat -> . IF LPAREN b_expression RPAREN assignment_statement
    (38) if_stat -> . IF LPAREN b_expression RPAREN assignment_statement elsepart
    (10) declaration -> . INT varlist SEMICOLON
    (19) ID -> . NAME
    (20) LEFT -> . ASTERISK var

    WHILE           shift and go to state 8
    IF              shift and go to state 15
    INT             shift and go to state 18
    NAME            shift and go to state 7
    ASTERISK        shift and go to state 12

    function_content               shift and go to state 16
    while_stat                     shift and go to state 17
    if_stat                        shift and go to state 11
    assignment_statement           shift and go to state 9
    declaration                    shift and go to state 13
    ID                             shift and go to state 14
    LEFT                           shift and go to state 10

state 7

    (19) ID -> NAME .

    EQUAL           reduce using rule 19 (ID -> NAME .)


state 8

    (33) while_stat -> WHILE . LPAREN b_expression RPAREN LBRACE function_content RBRACE
    (34) while_stat -> WHILE . LPAREN b_expression RPAREN assignment_statement

    LPAREN          shift and go to state 19


state 9

    (2) function_content -> assignment_statement .
    (5) function_content -> assignment_statement . function_content
    (2) function_content -> . assignment_statement
    (3) function_content -> . while_stat
    (4) function_content -> . if_stat
    (5) function_content -> . assignment_statement function_content
    (6) function_content -> . while_stat function_content
    (7) function_content -> . if_stat function_content
    (8) function_content -> . declaration
    (9) function_content -> . declaration function_content
    (17) assignment_statement -> . ID EQUAL expression SEMICOLON
    (18) assignment_statement -> . LEFT EQUAL expression SEMICOLON
    (33) while_stat -> . WHILE LPAREN b_expression RPAREN LBRACE function_content RBRACE
    (34) while_stat -> . WHILE LPAREN b_expression RPAREN assignment_statement
    (35) if_stat -> . IF LPAREN b_expression RPAREN LBRACE function_content RBRACE
    (36) if_stat -> . IF LPAREN b_expression RPAREN LBRACE function_content RBRACE elsepart
    (37) if_stat -> . IF LPAREN b_expression RPAREN assignment_statement
    (38) if_stat -> . IF LPAREN b_expression RPAREN assignment_statement elsepart
    (10) declaration -> . INT varlist SEMICOLON
    (19) ID -> . NAME
    (20) LEFT -> . ASTERISK var

    RBRACE          reduce using rule 2 (function_content -> assignment_statement .)
    WHILE           shift and go to state 8
    IF              shift and go to state 15
    INT             shift and go to state 18
    NAME            shift and go to state 7
    ASTERISK        shift and go to state 12

    function_content               shift and go to state 20
    while_stat                     shift and go to state 17
    if_stat                        shift and go to state 11
    assignment_statement           shift and go to state 9
    declaration                    shift and go to state 13
    ID                             shift and go to state 14
    LEFT                           shift and go to state 10

state 10

    (18) assignment_statement -> LEFT . EQUAL expression SEMICOLON

    EQUAL           shift and go to state 21


state 11

    (4) function_content -> if_stat .
    (7) function_content -> if_stat . function_content
    (2) function_content -> . assignment_statement
    (3) function_content -> . while_stat
    (4) function_content -> . if_stat
    (5) function_content -> . assignment_statement function_content
    (6) function_content -> . while_stat function_content
    (7) function_content -> . if_stat function_content
    (8) function_content -> . declaration
    (9) function_content -> . declaration function_content
    (17) assignment_statement -> . ID EQUAL expression SEMICOLON
    (18) assignment_statement -> . LEFT EQUAL expression SEMICOLON
    (33) while_stat -> . WHILE LPAREN b_expression RPAREN LBRACE function_content RBRACE
    (34) while_stat -> . WHILE LPAREN b_expression RPAREN assignment_statement
    (35) if_stat -> . IF LPAREN b_expression RPAREN LBRACE function_content RBRACE
    (36) if_stat -> . IF LPAREN b_expression RPAREN LBRACE function_content RBRACE elsepart
    (37) if_stat -> . IF LPAREN b_expression RPAREN assignment_statement
    (38) if_stat -> . IF LPAREN b_expression RPAREN assignment_statement elsepart
    (10) declaration -> . INT varlist SEMICOLON
    (19) ID -> . NAME
    (20) LEFT -> . ASTERISK var

    RBRACE          reduce using rule 4 (function_content -> if_stat .)
    WHILE           shift and go to state 8
    IF              shift and go to state 15
    INT             shift and go to state 18
    NAME            shift and go to state 7
    ASTERISK        shift and go to state 12

    function_content               shift and go to state 22
    while_stat                     shift and go to state 17
    if_stat                        shift and go to state 11
    assignment_statement           shift and go to state 9
    declaration                    shift and go to state 13
    ID                             shift and go to state 14
    LEFT                           shift and go to state 10

state 12

    (20) LEFT -> ASTERISK . var
    (29) var -> . ASTERISK var
    (30) var -> . AMPERSAND var
    (31) var -> . NAME

    ASTERISK        shift and go to state 25
    AMPERSAND       shift and go to state 24
    NAME            shift and go to state 26

    var                            shift and go to state 23

state 13

    (8) function_content -> declaration .
    (9) function_content -> declaration . function_content
    (2) function_content -> . assignment_statement
    (3) function_content -> . while_stat
    (4) function_content -> . if_stat
    (5) function_content -> . assignment_statement function_content
    (6) function_content -> . while_stat function_content
    (7) function_content -> . if_stat function_content
    (8) function_content -> . declaration
    (9) function_content -> . declaration function_content
    (17) assignment_statement -> . ID EQUAL expression SEMICOLON
    (18) assignment_statement -> . LEFT EQUAL expression SEMICOLON
    (33) while_stat -> . WHILE LPAREN b_expression RPAREN LBRACE function_content RBRACE
    (34) while_stat -> . WHILE LPAREN b_expression RPAREN assignment_statement
    (35) if_stat -> . IF LPAREN b_expression RPAREN LBRACE function_content RBRACE
    (36) if_stat -> . IF LPAREN b_expression RPAREN LBRACE function_content RBRACE elsepart
    (37) if_stat -> . IF LPAREN b_expression RPAREN assignment_statement
    (38) if_stat -> . IF LPAREN b_expression RPAREN assignment_statement elsepart
    (10) declaration -> . INT varlist SEMICOLON
    (19) ID -> . NAME
    (20) LEFT -> . ASTERISK var

    RBRACE          reduce using rule 8 (function_content -> declaration .)
    WHILE           shift and go to state 8
    IF              shift and go to state 15
    INT             shift and go to state 18
    NAME            shift and go to state 7
    ASTERISK        shift and go to state 12

    function_content               shift and go to state 27
    while_stat                     shift and go to state 17
    if_stat                        shift and go to state 11
    assignment_statement           shift and go to state 9
    declaration                    shift and go to state 13
    ID                             shift and go to state 14
    LEFT                           shift and go to state 10

state 14

    (17) assignment_statement -> ID . EQUAL expression SEMICOLON

    EQUAL           shift and go to state 28


state 15

    (35) if_stat -> IF . LPAREN b_expression RPAREN LBRACE function_content RBRACE
    (36) if_stat -> IF . LPAREN b_expression RPAREN LBRACE function_content RBRACE elsepart
    (37) if_stat -> IF . LPAREN b_expression RPAREN assignment_statement
    (38) if_stat -> IF . LPAREN b_expression RPAREN assignment_statement elsepart

    LPAREN          shift and go to state 29


state 16

    (1) program -> VOID MAIN LPAREN RPAREN LBRACE function_content . RBRACE

    RBRACE          shift and go to state 30


state 17

    (3) function_content -> while_stat .
    (6) function_content -> while_stat . function_content
    (2) function_content -> . assignment_statement
    (3) function_content -> . while_stat
    (4) function_content -> . if_stat
    (5) function_content -> . assignment_statement function_content
    (6) function_content -> . while_stat function_content
    (7) function_content -> . if_stat function_content
    (8) function_content -> . declaration
    (9) function_content -> . declaration function_content
    (17) assignment_statement -> . ID EQUAL expression SEMICOLON
    (18) assignment_statement -> . LEFT EQUAL expression SEMICOLON
    (33) while_stat -> . WHILE LPAREN b_expression RPAREN LBRACE function_content RBRACE
    (34) while_stat -> . WHILE LPAREN b_expression RPAREN assignment_statement
    (35) if_stat -> . IF LPAREN b_expression RPAREN LBRACE function_content RBRACE
    (36) if_stat -> . IF LPAREN b_expression RPAREN LBRACE function_content RBRACE elsepart
    (37) if_stat -> . IF LPAREN b_expression RPAREN assignment_statement
    (38) if_stat -> . IF LPAREN b_expression RPAREN assignment_statement elsepart
    (10) declaration -> . INT varlist SEMICOLON
    (19) ID -> . NAME
    (20) LEFT -> . ASTERISK var

    RBRACE          reduce using rule 3 (function_content -> while_stat .)
    WHILE           shift and go to state 8
    IF              shift and go to state 15
    INT             shift and go to state 18
    NAME            shift and go to state 7
    ASTERISK        shift and go to state 12

    while_stat                     shift and go to state 17
    function_content               shift and go to state 31
    if_stat                        shift and go to state 11
    assignment_statement           shift and go to state 9
    declaration                    shift and go to state 13
    ID                             shift and go to state 14
    LEFT                           shift and go to state 10

state 18

    (10) declaration -> INT . varlist SEMICOLON
    (11) varlist -> . NAME COMMA varlist
    (12) varlist -> . NAME
    (13) varlist -> . pointer COMMA varlist
    (14) varlist -> . pointer
    (15) pointer -> . ASTERISK pointer
    (16) pointer -> . ASTERISK NAME

    NAME            shift and go to state 32
    ASTERISK        shift and go to state 33

    varlist                        shift and go to state 34
    pointer                        shift and go to state 35

state 19

    (33) while_stat -> WHILE LPAREN . b_expression RPAREN LBRACE function_content RBRACE
    (34) while_stat -> WHILE LPAREN . b_expression RPAREN assignment_statement
    (44) b_expression -> . expression sign1 expression
    (45) b_expression -> . b_expression sign2 b_expression
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression ASTERISK expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . var
    (26) expression -> . NUMBERvar
    (27) expression -> . LPAREN expression RPAREN
    (32) expression -> . MINUS expression
    (29) var -> . ASTERISK var
    (30) var -> . AMPERSAND var
    (31) var -> . NAME
    (28) NUMBERvar -> . NUMBER

    LPAREN          shift and go to state 38
    MINUS           shift and go to state 42
    ASTERISK        shift and go to state 25
    AMPERSAND       shift and go to state 24
    NAME            shift and go to state 26
    NUMBER          shift and go to state 36

    b_expression                   shift and go to state 37
    NUMBERvar                      shift and go to state 39
    var                            shift and go to state 40
    expression                     shift and go to state 41

state 20

    (5) function_content -> assignment_statement function_content .

    RBRACE          reduce using rule 5 (function_content -> assignment_statement function_content .)


state 21

    (18) assignment_statement -> LEFT EQUAL . expression SEMICOLON
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression ASTERISK expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . var
    (26) expression -> . NUMBERvar
    (27) expression -> . LPAREN expression RPAREN
    (32) expression -> . MINUS expression
    (29) var -> . ASTERISK var
    (30) var -> . AMPERSAND var
    (31) var -> . NAME
    (28) NUMBERvar -> . NUMBER

    LPAREN          shift and go to state 38
    MINUS           shift and go to state 42
    ASTERISK        shift and go to state 25
    AMPERSAND       shift and go to state 24
    NAME            shift and go to state 26
    NUMBER          shift and go to state 36

    var                            shift and go to state 40
    NUMBERvar                      shift and go to state 39
    expression                     shift and go to state 43

state 22

    (7) function_content -> if_stat function_content .

    RBRACE          reduce using rule 7 (function_content -> if_stat function_content .)


state 23

    (20) LEFT -> ASTERISK var .

    EQUAL           reduce using rule 20 (LEFT -> ASTERISK var .)


state 24

    (30) var -> AMPERSAND . var
    (29) var -> . ASTERISK var
    (30) var -> . AMPERSAND var
    (31) var -> . NAME

    ASTERISK        shift and go to state 25
    AMPERSAND       shift and go to state 24
    NAME            shift and go to state 26

    var                            shift and go to state 44

state 25

    (29) var -> ASTERISK . var
    (29) var -> . ASTERISK var
    (30) var -> . AMPERSAND var
    (31) var -> . NAME

    ASTERISK        shift and go to state 25
    AMPERSAND       shift and go to state 24
    NAME            shift and go to state 26

    var                            shift and go to state 45

state 26

    (31) var -> NAME .

    SEMICOLON       reduce using rule 31 (var -> NAME .)
    PLUS            reduce using rule 31 (var -> NAME .)
    MINUS           reduce using rule 31 (var -> NAME .)
    ASTERISK        reduce using rule 31 (var -> NAME .)
    DIVIDE          reduce using rule 31 (var -> NAME .)
    RPAREN          reduce using rule 31 (var -> NAME .)
    LOGOR           reduce using rule 31 (var -> NAME .)
    LOGAND          reduce using rule 31 (var -> NAME .)
    EQUALS          reduce using rule 31 (var -> NAME .)
    NOTEQUAL        reduce using rule 31 (var -> NAME .)
    GREATER         reduce using rule 31 (var -> NAME .)
    LESSER          reduce using rule 31 (var -> NAME .)
    EQUAL           reduce using rule 31 (var -> NAME .)


state 27

    (9) function_content -> declaration function_content .

    RBRACE          reduce using rule 9 (function_content -> declaration function_content .)


state 28

    (17) assignment_statement -> ID EQUAL . expression SEMICOLON
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression ASTERISK expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . var
    (26) expression -> . NUMBERvar
    (27) expression -> . LPAREN expression RPAREN
    (32) expression -> . MINUS expression
    (29) var -> . ASTERISK var
    (30) var -> . AMPERSAND var
    (31) var -> . NAME
    (28) NUMBERvar -> . NUMBER
